@@ -1,3 +1,6 @@
+2003-02-22  Martin Willers <willers@xm-arts.de>
+	- don't display ticks in left-click menu
+
 2003-02-15  Martin Willers <willers@xm-arts.de>
 	- using KActions for start, stop, and configure entries
 	- display list of configured teas on left-click,
